--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -1,2 +1,22 @@
-<h1>Devices#index</h1>
-<p>Find me in app/views/devices/index.html.erb</p>
+<div class="container-fluid">
+  <h1>Devices</h1>
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>Asset Tag</th>
+        <th>Name</th>
+        <th>Type</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <% @devices.each do |device| %>
+        <tr>
+          <td><%= device.tag %></td>
+          <td><%= device.name %></td>
+          <td><%= device.type %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  <table>
+</div>
