--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container">
   <h1>Devices</h1>
   <table class="table table-striped">
     <thead>
@@ -6,6 +6,7 @@
         <th>Asset Tag</th>
         <th>Name</th>
         <th>Type</th>
+        <th colspan="3" class="fit"></th>
       </tr>
     </thead>
 
@@ -15,8 +16,13 @@
           <td><%= device.tag %></td>
           <td><%= device.name %></td>
           <td><%= device.type %></td>
+          <td class="fit"><%= link_to 'Show', device, class: "btn btn-primary" %></td>
+          <td class="fit"><%= link_to 'Edit', edit_device_path(device), class: "btn btn-primary" %></td>
+          <td class="fit"><%= link_to 'Delete', device, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></td>
         </tr>
       <% end %>
     </tbody>
   <table>
+  <br>
+  <%= link_to 'New Device', new_device_path, class: "btn btn-primary" %>
 </div>
