rename devices type column to dev_type

--- a/app/views/devices/show.html.erb
+++ b/app/views/devices/show.html.erb
@@ -15,7 +15,7 @@
     <dt>Name:</dt>
     <dd><%= @device.name %></dd>
     <dt>Type:</dt>
-    <dd><%= @device.type %></dd>
+    <dd><%= @device.dev_type %></dd>
     <dt>Make:</dt>
     <dd><%= @device.make %></dd>
     <dt>Model:</dt>
