--- a/app/views/devices/_form.html.erb
+++ b/app/views/devices/_form.html.erb
@@ -29,9 +29,9 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :type, class: "col-xs-12 col-sm-2 control-label" %>
+    <%= f.label :dev_type, class: "col-xs-12 col-sm-2 control-label" %>
     <div class="col-xs-10 col-sm-4">
-      <%= f.text_field :type, class: "form-control" %>
+      <%= f.text_field :dev_type, class: "form-control" %>
     </div>
   </div>
 
