--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -15,7 +15,7 @@
         <tr>
           <td><%= device.tag %></td>
           <td><%= device.name %></td>
-          <td><%= device.type %></td>
+          <td><%= device.dev_type %></td>
           <td class="fit"><%= link_to 'Show', device, class: "btn btn-primary" %></td>
           <td class="fit"><%= link_to 'Edit', edit_device_path(device), class: "btn btn-primary" %></td>
           <td class="fit"><%= link_to 'Delete', device, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></td>
