add additional fields from device and licence models into respective views

--- a/app/views/devices/show.html.erb
+++ b/app/views/devices/show.html.erb
@@ -22,6 +22,12 @@
     <dd><%= @device.model %></dd>
     <dt>Serial:</dt>
     <dd><%= @device.serial %></dd>
+    <dt>Purchased:</dt>
+    <dd><%= @device.purchased_on %></dd>
+    <dt>Warranty length:</dt>
+    <dd><%= @device.warranty_length %></dd>
+    <dt>Warranty Type:</dt>
+    <dd><%= @device.warranty_type %></dd>
   </dl>
   <hr />
 
