--- a/app/views/licences/show.html.erb
+++ b/app/views/licences/show.html.erb
@@ -10,8 +10,20 @@
 
   <hr />
   <dl class="dl-horizontal">
-    <dt></dt>
-    <dd></dd>
+    <dt>Vendor:</dt>
+    <dd><%= @licence.vendor %></dd>
+    <dt>Application:</dt>
+    <dd><%= @licence.app_name %></dd>
+    <dt>Version:</dt>
+    <dd><%= @licence.version %></dd>
+    <dt>Edition:</dt>
+    <dd><%= @licence.edition %></dd>
+    <dt>Channel:</dt>
+    <dd><%= @licence.channel %></dd>
+    <dt>Purchased From:</dt>
+    <dd><%= @licence.purchased_from %></dd>
+    <dt>Purchased Date</dt>
+    <dd><%= @licence.purchased_date %></dd>
   </dl>
   <hr />
 
