--- a/app/views/devices/_form.html.erb
+++ b/app/views/devices/_form.html.erb
@@ -56,6 +56,27 @@
     </div>
   </div>
 
+  <div class="form-group">
+    <%= f.label :purchased_on, class: "col-xs-12 col-sm-2 control-label" %>
+    <div class="col-xs-10 col-sm-4">
+      <%= f.date_field :purchased_on, class: "form-control" %>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :warranty_length, class: "col-xs-12 col-sm-2 control-label" %>
+    <div class="col-xs-10 col-sm-4">
+      <%= f.text_field :warranty_length, class: "form-control" %>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :warranty_type, class: "col-xs-12 col-sm-2 control-label" %>
+    <div class="col-xs-10 col-sm-4">
+      <%= f.text_field :warranty_type, class: "form-control" %>
+    </div>
+  </div>
+
   <div class="actions form-group">
     <div class="col-xs-12 col-sm-10 col-sm-offset-2">
       <%= f.submit "Submit", class: "btn btn-success" %>
