--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -6,6 +6,8 @@
         <th>Asset Tag</th>
         <th>Name</th>
         <th>Type</th>
+        <th>Make</th>
+        <th>Model</th>
         <th colspan="3" class="fit"></th>
       </tr>
     </thead>
@@ -16,6 +18,8 @@
           <td><%= device.tag %></td>
           <td><%= device.name %></td>
           <td><%= device.dev_type %></td>
+          <td><%= device.make %></td>
+          <td><%= device.model %></td>
           <td class="fit"><%= link_to 'Show', device, class: "btn btn-primary" %></td>
           <td class="fit"><%= link_to 'Edit', edit_device_path(device), class: "btn btn-primary" %></td>
           <td class="fit"><%= link_to 'Delete', device, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></td>
