--- a/app/views/licences/_form.html.erb
+++ b/app/views/licences/_form.html.erb
@@ -59,7 +59,7 @@
   <div class="form-group">
     <%= f.label :purchased_date, class: "col-xs-12 col-sm-2 control-label" %>
     <div class="col-xs-10 col-sm-4">
-      <%= f.text_field :purchased_date, class: "form-control" %>
+      <%= f.date_field :purchased_date, class: "form-control" %>
     </div>
   </div>
 
