--- a/app/views/licences/index.html.erb
+++ b/app/views/licences/index.html.erb
@@ -7,6 +7,7 @@
         <th>Application</th>
         <th>Version</th>
         <th>Edition</th>
+        <th>Channel</th>
         <th colspan="3" class="fit"></th>
       </tr>
     </thead>
@@ -18,6 +19,7 @@
           <td><%= licence.app_name %></td>
           <td><%= licence.version %></td>
           <td><%= licence.edition %></td>
+          <td><%= licence.channel %></td>
           <td class="fit"><%= link_to 'Show', licence, class: "btn btn-primary" %></td>
           <td class="fit"><%= link_to 'Edit', edit_licence_path(licence), class: "btn btn-primary" %></td>
           <td class="fit"><%= link_to 'Delete', licence, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></td>
