--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,29 +1,44 @@
-<%= form_for(@user) do |f| %>
-  <% if @user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
+<% if @user.errors.any? %>
+  <div id="error_explanation" class="alert alert-danger alert-dismissible">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+    <strong><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</strong>
 
-      <ul>
-      <% @user.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+    <ul>
+    <% @user.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
+
+<!-- horizontal form -->
+<%= form_for @user, :html => {:class => "form-horizontal"} do |f| %>
+
+  <div class="form-group">
+    <%= f.label :first_name, class: "col-xs-12 col-sm-2 control-label" %>
+    <div class="col-xs-10 col-sm-4">
+      <%= f.text_field :first_name, class: "form-control" %>
     </div>
-  <% end %>
+  </div>
 
-  <div class="field">
-    <%= f.label :first_name %><br>
-    <%= f.text_field :first_name %>
+  <div class="form-group">
+    <%= f.label :last_name, class: "col-xs-12 col-sm-2 control-label" %>
+    <div class="col-xs-10 col-sm-4">
+      <%= f.text_field :last_name, class: "form-control" %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :last_name %><br>
-    <%= f.text_field :last_name %>
+
+  <div class="form-group">
+    <%= f.label :location, class: "col-xs-12 col-sm-2 control-label" %>
+    <div class="col-xs-10 col-sm-4">
+      <%= f.text_field :location, class: "form-control" %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :location %><br>
-    <%= f.text_field :location %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
+
+  <div class="actions form-group">
+    <div class="col-xs-12 col-sm-10 col-sm-offset-2">
+      <%= f.submit "Submit", class: "btn btn-success" %>
+      <%= link_to "Back", :back, class: "btn btn-primary" %>
+    </div>
   </div>
 <% end %>
