--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,7 @@
-<h1>Editing User</h1>
+<div class="container">
+  <h1>Editing User</h1>
+  <br />
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+</div>
