--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,19 +1,26 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+  <h1>Showing user - <%= h @user.id %></h1>
 
-<p>
-  <strong>First name:</strong>
-  <%= @user.first_name %>
-</p>
+  <% if notice %>
+    <div id="notice" class="alert alert-success alert-dismissible">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      <%= notice %>
+    </div>
+  <% end %>
 
-<p>
-  <strong>Last name:</strong>
-  <%= @user.last_name %>
-</p>
+  <hr />
+  <dl class="dl-horizontal">
+    <dt>First Name:</dt>
+    <dd><%= @user.first_name %></dd>
+    <dt>Last Name:</dt>
+    <dd><%= @user.last_name %></dd>
+    <dt>Location:</dt>
+    <dd><%= @user.location %></dd>
+  </dl>
+  <hr />
 
-<p>
-  <strong>Location:</strong>
-  <%= @user.location %>
-</p>
+  <%= link_to 'Edit', edit_user_path(@user), class: "btn btn-primary" %>
+  <%= link_to 'Back', users_path, class: "btn btn-primary" %>
+</div>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<%= debug @user %>
