add nav and footer. fix index styling

--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -26,7 +26,7 @@
         </tr>
       <% end %>
     </tbody>
-  <table>
+  </table>
   <br>
   <%= link_to 'New Device', new_device_path, class: "btn btn-primary" %>
 </div>
