--- a/app/views/licences/index.html.erb
+++ b/app/views/licences/index.html.erb
@@ -26,7 +26,7 @@
         </tr>
       <% end %>
     </tbody>
-  <table>
+  </table>
   <br>
   <%= link_to 'New Licence', new_licence_path, class: "btn btn-primary" %>
 </div>
