--- a/app/views/licences/_form.html.erb
+++ b/app/views/licences/_form.html.erb
@@ -63,6 +63,20 @@
     </div>
   </div>
 
+  <div class="form-group">
+    <%= f.label :device_id, class: "col-xs-12 col-sm-2 control-label" %>
+    <div class="col-xs-10 col-sm-4">
+      <%= f.collection_select :device_id, Device.order(:tag), :id, :name, {prompt: true}, {class: "form-control"} %>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :user_id, class: "col-xs-12 col-sm-2 control-label" %>
+    <div class="col-xs-10 col-sm-4">
+      <%= f.collection_select :user_id, User.order(:last_name), :id, :full_name, {prompt: true}, {class: "form-control"} %>
+    </div>
+  </div>
+
   <div class="actions form-group">
     <div class="col-xs-12 col-sm-10 col-sm-offset-2">
       <%= f.submit "Submit", class: "btn btn-success" %>
