rename licences purchased_on column to purchased_on

--- a/app/views/licences/_form.html.erb
+++ b/app/views/licences/_form.html.erb
@@ -57,9 +57,9 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :purchased_date, class: "col-xs-12 col-sm-2 control-label" %>
+    <%= f.label :purchased_on, class: "col-xs-12 col-sm-2 control-label" %>
     <div class="col-xs-10 col-sm-4">
-      <%= f.date_field :purchased_date, class: "form-control" %>
+      <%= f.date_field :purchased_on, class: "form-control" %>
     </div>
   </div>
 
