--- a/app/views/licences/show.html.erb
+++ b/app/views/licences/show.html.erb
@@ -22,8 +22,8 @@
     <dd><%= @licence.channel %></dd>
     <dt>Purchased From:</dt>
     <dd><%= @licence.purchased_from %></dd>
-    <dt>Purchased Date</dt>
-    <dd><%= @licence.purchased_date %></dd>
+    <dt>Purchased on</dt>
+    <dd><%= @licence.purchased_on %></dd>
   </dl>
   <hr />
 
