add virtual attribute to device model & views to format tag output

--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -15,7 +15,7 @@
     <tbody>
       <% @devices.each do |device| %>
         <tr>
-          <td><%= device.tag %></td>
+          <td><%= device.tag_formatted %></td>
           <td><%= device.name %></td>
           <td><%= device.dev_type %></td>
           <td><%= device.make %></td>
