--- a/app/views/devices/show.html.erb
+++ b/app/views/devices/show.html.erb
@@ -11,7 +11,7 @@
   <hr />
   <dl class="dl-horizontal">
     <dt>Asset Tag:</dt>
-    <dd><%= @device.tag %></dd>
+    <dd><%= @device.tag_formatted %></dd>
     <dt>Name:</dt>
     <dd><%= @device.name %></dd>
     <dt>Type:</dt>
