allow user_id & device_id in devices & licences to be nil and fix handling in device show view

--- a/app/views/devices/show.html.erb
+++ b/app/views/devices/show.html.erb
@@ -69,7 +69,7 @@
     </thead>
 
     <tbody>
-      <% @device.user.licences.each do |l| %>
+      <% @device.user.try(:licences).try(:each) do |l| %>
         <tr>
           <td><%= "#{l.vendor}" %></td>
           <td><%= "#{l.app_full}" %></td>
