--- a/app/views/devices/_form.html.erb
+++ b/app/views/devices/_form.html.erb
@@ -80,7 +80,7 @@
   <div class="form-group">
     <%= f.label :user, class: "col-xs-12 col-sm-2 control-label" %>
     <div class="col-xs-10 col-sm-4">
-      <%= f.collection_select :user_id, User.order(:last_name), :id, :full_name, {prompt: true}, {class: "form-control"} %>
+      <%= f.collection_select :user_id, User.order(:last_name), :id, :full_name, {prompt: true, include_blank: "None"}, {class: "form-control"} %>
     </div>
   </div>
 
