--- a/app/views/licences/show.html.erb
+++ b/app/views/licences/show.html.erb
@@ -24,6 +24,8 @@
     <dd><%= @licence.purchased_from %></dd>
     <dt>Purchased on</dt>
     <dd><%= @licence.purchased_on %></dd>
+    <dt>In Use:</dt>
+    <dd><%= @licence.in_use %></dd>
     <dt>Device:</dt>
     <dd><%= @licence.device.try(:name) %></dd>
     <dt>User:</dt>
