--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -8,7 +8,7 @@
         <th>Type</th>
         <th>Make</th>
         <th>Model</th>
-        <th>User</th>
+        <th>Person</th>
         <th colspan="3" class="fit"></th>
       </tr>
     </thead>
@@ -21,7 +21,7 @@
           <td><%= device.dev_type %></td>
           <td><%= device.make %></td>
           <td><%= device.model %></td>
-          <td><%= device.user.try(:full_name) %></td>
+          <td><%= device.person.try(:full_name) %></td>
           <td class="fit"><%= link_to 'Show', device, class: "btn btn-primary" %></td>
           <td class="fit"><%= link_to 'Edit', edit_device_path(device), class: "btn btn-primary" %></td>
           <td class="fit"><%= link_to 'Delete', device, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></td>
