--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -26,8 +26,8 @@
           <%= link_to 'Devices', devices_path %>
         </li>
 
-        <li class="<%= is_active(users_path) %>">
-          <%= link_to 'Users', users_path %>
+        <li class="<%= is_active(people_path) %>">
+          <%= link_to 'People', people_path %>
         </li>
       </ul>
 
