--- a/app/views/licences/index.html.erb
+++ b/app/views/licences/index.html.erb
@@ -9,7 +9,7 @@
         <th>Edition</th>
         <th>Channel</th>
         <th>Device</th>
-        <th>User</th>
+        <th>Person</th>
         <th colspan="3" class="fit"></th>
       </tr>
     </thead>
@@ -23,7 +23,7 @@
           <td><%= licence.edition %></td>
           <td><%= licence.channel %></td>
           <td><%= licence.device.try(:name) %></td>
-          <td><%= licence.user.try(:full_name) %></td>
+          <td><%= licence.person.try(:full_name) %></td>
           <td class="fit"><%= link_to 'Show', licence, class: "btn btn-primary" %></td>
           <td class="fit"><%= link_to 'Edit', edit_licence_path(licence), class: "btn btn-primary" %></td>
           <td class="fit"><%= link_to 'Delete', licence, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></td>
