--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -1,10 +1,10 @@
-<% if @user.errors.any? %>
+<% if @person.errors.any? %>
   <div id="error_explanation" class="alert alert-danger alert-dismissible">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-    <strong><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</strong>
+    <strong><%= pluralize(@person.errors.count, "error") %> prohibited this person from being saved:</strong>
 
     <ul>
-    <% @user.errors.full_messages.each do |message| %>
+    <% @person.errors.full_messages.each do |message| %>
       <li><%= message %></li>
     <% end %>
     </ul>
@@ -12,7 +12,7 @@
 <% end %>
 
 <!-- horizontal form -->
-<%= form_for @user, :html => {:class => "form-horizontal"} do |f| %>
+<%= form_for @person, :html => {:class => "form-horizontal"} do |f| %>
 
   <div class="form-group">
     <%= f.label :first_name, class: "col-xs-12 col-sm-2 control-label" %>
