add session and registraion links to nav

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -31,6 +31,23 @@
         </li>
       </ul>
 
+      <ul class="nav navbar-nav navbar-right">
+        <% if user_signed_in? %>
+        <li>
+          <p class="navbar-text">Logged in as: <%= link_to "#{current_user.email}", edit_user_registration_path %>
+        </li>
+        <li>
+          <%= link_to 'Logout', destroy_user_session_path, :method => :delete %>
+        </li>
+        <% else %>
+        <li>
+          <%= link_to 'Login', new_user_session_path %>
+        </li>
+        <li>
+          <%= link_to 'Signup', new_user_registration_path %>
+        </li>
+        <% end %>
+      </ul>
     </div>
   </div>
 </nav>
