--- a/app/views/devices/_form.html.erb
+++ b/app/views/devices/_form.html.erb
@@ -84,6 +84,13 @@
     </div>
   </div>
 
+  <div class="form-group">
+    <%= f.label :notes, class: "col-xs-12 col-sm-2 control-label" %>
+    <div class="col-xs-10 col-sm-4">
+      <%= f.text_area :notes, class: "form-control" %>
+    </div>
+  </div>
+
   <div class="actions form-group">
     <div class="col-xs-12 col-sm-10 col-sm-offset-2">
       <%= f.submit "Submit", class: "btn btn-success" %>
