--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,21 @@
-<h2>Forgot your password?</h2>
+<div class="container">
+  <h2>Forgot your password?</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post, class: "form-horizontal" }) do |f| %>
+    <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+    <div class="form-group">
+      <%= f.label :email, class: "col-xs-12 col-sm-2 control-label" %>
+      <div class="col-xs-10 col-sm-4">
+        <%= f.email_field :email, autofocus: true, class: "form-control" %>
+      </div>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+    <div class="actions form-group">
+      <div class="col-xs-12 col-sm-10 col-sm-offset-2">
+        <%= f.submit "Reset password", class: "btn btn-success" %>
+        <%= link_to "Back", :back, class: "btn btn-primary" %>
+      </div>
+    </div>
+  <% end %>
+</div>
