--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -7,11 +7,11 @@
 
     <div class="form-group">
       <%= f.label :password, "New password", class: "col-xs-12 col-sm-2 control-label" %>
-      <% if @minimum_password_length %>
-        <em>(<%= @minimum_password_length %> characters minimum)</em>
-      <% end %>
       <div class="col-xs-10 col-sm-4">
         <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
+        <% if @minimum_password_length %>
+          <span class="help-block"><%= @minimum_password_length %> characters minimum</span>
+        <% end %>
       </div>
     </div>
 
