--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -17,19 +17,19 @@
 
     <div class="form-group">
       <%= f.label :current_password, class: "col-xs-12 col-sm-2 control-label" %>
-      <i>(we need your current password to confirm your changes)</i>
       <div class="col-xs-10 col-sm-4">
         <%= f.password_field :current_password, autocomplete: "off", class: "form-control" %>
+        <span class="help-block">We need your current password to confirm changes</span>
       </div>
     </div>
 
     <div class="form-group">
       <%= f.label :password, "New Password", class: "col-xs-12 col-sm-2 control-label" %>
-      <% if @minimum_password_length %>
-        <em><%= @minimum_password_length %> characters minimum</em>
-      <% end %>
       <div class="col-xs-10 col-sm-4">
         <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
+        <% if @minimum_password_length %>
+          <span class="help-block"><%= @minimum_password_length %> characters minimum</span>
+        <% end %>
       </div>
     </div>
 
