--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -33,19 +33,19 @@
 
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
-        <li>
-          <p class="navbar-text">Logged in as: <%= link_to "#{current_user.email}", edit_user_registration_path %>
-        </li>
-        <li>
-          <%= link_to 'Logout', destroy_user_session_path, :method => :delete %>
-        </li>
+          <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+              <%= current_user.email %>
+              <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu" role="menu">
+              <li><%= link_to 'Profile', edit_user_registration_path %></li>
+              <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
+            </ul>
+          </li>
         <% else %>
-        <li>
-          <%= link_to 'Login', new_user_session_path %>
-        </li>
-        <li>
-          <%= link_to 'Signup', new_user_registration_path %>
-        </li>
+          <li><%= link_to 'Log In', new_user_session_path %></li>
+          <li><%= link_to 'Sign Up', new_user_registration_path %></li>
         <% end %>
       </ul>
     </div>
