--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -50,3 +50,13 @@ html
 // form error formatting
 .field_with_errors
   @extend .has-error
+
+// devise alert styling
+.alert-alert
+  @extend .alert-danger
+
+.alert-error
+  @extend .alert-danger
+
+.alert-notice
+  @extend .alert-success
