--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,15 @@
 <body>
   <%= render 'layouts/nav' %>
 
+  <div class="container">
+    <% flash.each do |key, value| %>
+      <div class="alert alert-dismissible alert-<%= key %>">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <%= value %>
+      </div>
+    <% end %>
+  </div>
+
   <div class="container-fluid">
     <%= yield %>
   </div>
