--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -44,8 +44,8 @@
             </ul>
           </li>
         <% else %>
-          <li><%= link_to 'Log In', new_user_session_path %></li>
-          <li><%= link_to 'Sign Up', new_user_registration_path %></li>
+          <li class="<%= is_active(new_user_session_path) %>"><%= link_to 'Log In', new_user_session_path %></li>
+          <li class="<%= is_active(new_user_registration_path) %>"><%= link_to 'Sign Up', new_user_registration_path %></li>
         <% end %>
       </ul>
     </div>
