--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -15,11 +15,17 @@
         <td><%= person.full_name %></td>
         <td><%= person.location %></td>
         <td class="fit"><%= link_to 'Show', person, class: "btn btn-primary" %></td>
-        <td class="fit"><%= link_to 'Edit', edit_person_path(person), class: "btn btn-primary" %></td>
-        <td class="fit"><%= link_to 'Delete', person, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></td>
+        <% if user_signed_in? %>
+          <td class="fit"><%= link_to 'Edit', edit_person_path(person), class: "btn btn-primary" %></td>
+          <td class="fit"><%= link_to 'Delete', person, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></td>
+        <% else %>
+          <td colspan="2>" class="fit"></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
 <br>
-<%= link_to 'New Person', new_person_path, class: "btn btn-primary" %>
+<% if user_signed_in? %>
+  <%= link_to 'New Person', new_person_path, class: "btn btn-primary" %>
+<% end %>
