--- a/app/views/devices/show.html.erb
+++ b/app/views/devices/show.html.erb
@@ -33,7 +33,9 @@
 
 <hr />
 
-<%= link_to 'Edit', edit_device_path(@device), class: "btn btn-primary" %>
+<% if user_signed_in? %>
+  <%= link_to 'Edit', edit_device_path(@device), class: "btn btn-primary" %>
+<% end %>
 <%= link_to 'Back', devices_path, class: "btn btn-primary" %>
 
 <h2>Device Licences</h2>
