--- a/app/views/licences/show.html.erb
+++ b/app/views/licences/show.html.erb
@@ -32,5 +32,7 @@
 </dl>
 <hr />
 
-<%= link_to 'Edit', edit_licence_path(@licence), class: "btn btn-primary" %>
+<% if user_signed_in? %>
+  <%= link_to 'Edit', edit_licence_path(@licence), class: "btn btn-primary" %>
+<% end %>
 <%= link_to 'Back', licences_path, class: "btn btn-primary" %>
