--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -20,7 +20,9 @@
 </dl>
 <hr />
 
-<%= link_to 'Edit', edit_person_path(@person), class: "btn btn-primary" %>
+<% if user_signed_in? %>
+  <%= link_to 'Edit', edit_person_path(@person), class: "btn btn-primary" %>
+<% end %>
 <%= link_to 'Back', people_path, class: "btn btn-primary" %>
 
 <h2>Person Licences</h2>
