--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,6 @@
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "form-horizontal", method: :put }) do |f| %>
+<%= form_for(resource, as: resource_name, url: user_registration_path, html: { class: "form-horizontal", method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="form-group">
@@ -43,7 +43,6 @@
     <div class="col-xs-12 col-sm-10 col-sm-offset-2">
       <%= f.submit "Update", class: "btn btn-success" %>
       <%= link_to "Back", :back, class: "btn btn-primary" %>
-      <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-danger" %>
     </div>
   </div>
 <% end %>
