fix import template paths in views

--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -44,7 +44,7 @@
 
     <div class="actions form-group">
       <%= submit_tag "Import CSV", class: "btn btn-success" %>
-      <%= link_to 'Download a template csv', asset_path("device_template.csv"), class: "btn btn-link" %>
+      <%= link_to 'Download a template csv', asset_path("devices_template.csv"), class: "btn btn-link" %>
     </div>
   <% end %>
 <% end %>
