--- a/app/views/licences/index.html.erb
+++ b/app/views/licences/index.html.erb
@@ -46,7 +46,7 @@
 
     <div class="actions form-group">
       <%= submit_tag "Import CSV", class: "btn btn-success" %>
-      <%= link_to 'Download a template csv', asset_path("licence_template.csv"), class: "btn btn-link" %>
+      <%= link_to 'Download a template csv', asset_path("licences_template.csv"), class: "btn btn-link" %>
     </div>
   <% end %>
 <% end %>
