add import to nav layout

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -29,6 +29,10 @@
         <li class="<%= is_active(people_path) %>">
           <%= link_to 'People', people_path %>
         </li>
+
+        <li class="<%= is_active(import_path) %>">
+          <%= link_to 'Import Data', import_path %>
+        </li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
