renamed devices and licences to hardware and software

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -19,11 +19,11 @@
 
       <ul class="nav navbar-nav">
         <li class="<%= is_active(devices_path) %>">
-          <%= link_to 'Devices', devices_path %>
+          <%= link_to 'Hardware', devices_path %>
         </li>
 
         <li class="<%= is_active(licences_path) %>">
-          <%= link_to 'Licences', licences_path %>
+          <%= link_to 'Software', licences_path %>
         </li>
 
         <li class="<%= is_active(people_path) %>">
