changed from person to assigned to in device views

--- a/app/views/devices/_form.html.erb
+++ b/app/views/devices/_form.html.erb
@@ -78,7 +78,7 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :person, class: "col-xs-12 col-sm-2 control-label" %>
+    <%= f.label :assigned_to, class: "col-xs-12 col-sm-2 control-label" %>
     <div class="col-xs-10 col-sm-4">
       <%= f.collection_select :person_id, Person.order(:last_name), :id, :full_name, {prompt: true, include_blank: "None"}, {class: "form-control"} %>
     </div>
