--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -7,7 +7,7 @@
       <th>Type</th>
       <th>Make</th>
       <th>Model</th>
-      <th>Person</th>
+      <th>Assigned to</th>
       <th colspan="3" class="fit"></th>
     </tr>
   </thead>
