--- a/app/views/licences/_form.html.erb
+++ b/app/views/licences/_form.html.erb
@@ -70,26 +70,33 @@
     </div>
   </div>
 
-  <div class="form-group">
-    <%= f.label :device_id, class: "col-xs-12 col-sm-2 control-label" %>
-    <div class="col-xs-10 col-sm-4">
-      <%= f.collection_select :device_id, Device.order(:tag), :id, :name, {prompt: true, include_blank: "None"}, {class: "form-control"} %>
-    </div>
-  </div>
+  <fieldset>
+    <legend>Assign to</legend>
 
-  <div class="form-group">
-    <%= f.label :person_id, class: "col-xs-12 col-sm-2 control-label" %>
-    <div class="col-xs-10 col-sm-4">
-      <%= f.collection_select :person_id, Person.order(:last_name), :id, :full_name, {prompt: true, include_blank: "None"}, {class: "form-control"} %>
+    <div class="form-group">
+      <%= f.label :device_id, class: "col-xs-12 col-sm-2 control-label" %>
+      <div class="col-xs-10 col-sm-4">
+        <%= f.collection_select :device_id, Device.order(:tag), :id, :name, {prompt: true, include_blank: "None"}, {class: "form-control"} %>
+      </div>
     </div>
-  </div>
 
+    <div class="form-group">
+      <%= f.label :person_id, class: "col-xs-12 col-sm-2 control-label" %>
+      <div class="col-xs-10 col-sm-4">
+        <%= f.collection_select :person_id, Person.order(:last_name), :id, :full_name, {prompt: true, include_blank: "None"}, {class: "form-control"} %>
+      </div>
+    </div>
+  </fieldset>
+
+  <fieldset>
+  <legend></legend>
   <div class="form-group">
     <%= f.label :notes, class: "col-xs-12 col-sm-2 control-label" %>
     <div class="col-xs-10 col-sm-4">
       <%= f.text_area :notes, class: "form-control" %>
     </div>
   </div>
+  </fieldset>
 
   <div class="actions form-group">
     <div class="col-xs-12 col-sm-10 col-sm-offset-2">
