--- a/app/views/licences/index.html.erb
+++ b/app/views/licences/index.html.erb
@@ -2,14 +2,17 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th>Vendor</th>
-      <th>Application</th>
-      <th>Version</th>
-      <th>Edition</th>
-      <th>Channel</th>
+      <th rowspan="2">Vendor</th>
+      <th rowspan="2">Application</th>
+      <th rowspan="2">Version</th>
+      <th rowspan="2">Edition</th>
+      <th rowspan="2">Channel</th>
+      <th colspan="2">Assigned to</th>
+      <th rowspan="2" colspan="3" class="fit"></th>
+    </tr>
+    <tr>
       <th>Device</th>
       <th>Person</th>
-      <th colspan="3" class="fit"></th>
     </tr>
   </thead>
 
