tidy up person show view

--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Showing person - <%= h @person.id %></h1>
+<h1><%= h @person.full_name %></h1>
 
 <% if notice %>
   <div id="notice" class="alert alert-success alert-dismissible">
