--- a/app/views/licences/show.html.erb
+++ b/app/views/licences/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Licence <%= h @licence.id %></h1>
+<h1><%= h @licence.app_full%></h1>
 
 <% if notice %>
   <div id="notice" class="alert alert-success alert-dismissible">
