comment out broken sass from bootstrap 3

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -45,17 +45,28 @@ html
   // line-height = height for single line vertically centered
   line-height: 50px
   background-color: $navbar-default-bg
+  // background-color: $navbar-default-bg
 
 // form error formatting
 .field_with_errors
   @extend .has-error
+// // form error formatting
+// .field_with_errors
+//   @extend .has-error
 
 // devise alert styling
 .alert-alert
   @extend .alert-danger
+// // devise alert styling
+// .alert-alert
+//   @extend .alert-danger
 
 .alert-error
   @extend .alert-danger
+// .alert-error
+//   @extend .alert-danger
 
 .alert-notice
   @extend .alert-success
+// .alert-notice
+//   @extend .alert-success
