--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -41,32 +41,21 @@ html
   bottom: 0
   width: 100%
   // Set the fixed height of the footer here
-  height: 50px
+  height: 60px
   // line-height = height for single line vertically centered
-  line-height: 50px
-  background-color: $navbar-default-bg
-  // background-color: $navbar-default-bg
+  line-height: 60px
+  background-color: $gray-200
 
-// form error formatting
-.field_with_errors
-  @extend .has-error
 // // form error formatting
 // .field_with_errors
 //   @extend .has-error
 
-// devise alert styling
-.alert-alert
-  @extend .alert-danger
 // // devise alert styling
 // .alert-alert
 //   @extend .alert-danger
 
-.alert-error
-  @extend .alert-danger
 // .alert-error
 //   @extend .alert-danger
 
-.alert-notice
-  @extend .alert-success
 // .alert-notice
 //   @extend .alert-success
