--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,8 @@
 <footer class="footer">
   <div class="container-fluid">
-    <div class="row small text-muted">
-      <div class="col-xs-6 text-left">&copy <%= Date.today.year %> Carl Potter</div>
-      <div class="col-xs-6 text-right">rev 0.2</div>
+    <div class="row text-muted">
+      <div class="col-6 text-left">&copy <%= Date.today.year %> Carl Potter</div>
+      <div class="col-6 text-right">rev 0.2</div>
     </div>
   </div>
 </footer>
