--- a/app/views/devices/show.html.erb
+++ b/app/views/devices/show.html.erb
@@ -8,7 +8,7 @@
 <% end %>
 
 <hr />
-<dl class="dl-horizontal">
+<dl class="show">
   <dt>Asset Tag:</dt>
   <dd><%= @device.tag_formatted %></dd>
   <dt>Name:</dt>
