--- a/app/views/licences/show.html.erb
+++ b/app/views/licences/show.html.erb
@@ -8,7 +8,7 @@
 <% end %>
 
 <hr />
-<dl class="dl-horizontal">
+<dl class="show">
   <dt>Vendor:</dt>
   <dd><%= @licence.vendor %></dd>
   <dt>Application:</dt>
