--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -8,7 +8,7 @@
 <% end %>
 
 <hr />
-<dl class="dl-horizontal">
+<dl class="show">
   <dt>First Name:</dt>
   <dd><%= @person.first_name %></dd>
   <dt>Last Name:</dt>
