--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -58,16 +58,16 @@ dl.show
     @extend .col-10
     @extend .text-left
 
-// // form error formatting
-// .field_with_errors
-//   @extend .has-error
+// form error formatting
+.field_with_errors
+  @extend .is-invalid
 
-// // devise alert styling
-// .alert-alert
-//   @extend .alert-danger
+// devise alert styling
+.alert-alert
+  @extend .alert-danger
 
-// .alert-error
-//   @extend .alert-danger
+.alert-error
+  @extend .alert-danger
 
-// .alert-notice
-//   @extend .alert-success
+.alert-notice
+  @extend .alert-success
