--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -43,9 +43,10 @@ html
   bottom: 0
   width: 100%
   // Set the fixed height of the footer here
-  height: 60px
+  height: 50px
   // line-height = height for single line vertically centered
-  line-height: 60px
+  line-height: 50px
+  font-size: $small-font-size
   background-color: $gray-200
 
 // styles for dl's on the show views
