--- a/app/views/devices/_form.html.erb
+++ b/app/views/devices/_form.html.erb
@@ -92,7 +92,7 @@
   </div>
 
   <div class="actions form-group row">
-    <div class="col-sm-10 col-sm-offset-2">
+    <div class="col-sm-10 offset-sm-2">
       <%= f.submit "Submit", class: "btn btn-success" %>
       <%= link_to "Back", :back, class: "btn btn-primary" %>
     </div>
