--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Hardware</h1>
-<table class="table table-striped">
+<table class="table table-striped table-sm">
   <thead>
     <tr>
       <th>Asset Tag</th>
@@ -21,12 +21,12 @@
         <td><%= device.make %></td>
         <td><%= device.model %></td>
         <td><%= device.person.try(:full_name) %></td>
-        <td class="fit"><%= link_to 'Show', device, class: "btn btn-success" %></td>
+        <td><%= link_to 'Show', device, class: "btn btn-success" %></td>
         <% if user_signed_in? %>
-          <td class="fit"><%= link_to 'Edit', edit_device_path(device), class: "btn btn-primary" %></td>
-          <td class="fit"><%= link_to 'Delete', device, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></td>
+          <td><%= link_to 'Edit', edit_device_path(device), class: "btn btn-primary" %></td>
+          <td><%= link_to 'Delete', device, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></td>
         <% else %>
-          <td colspan="2>" class="fit"></td>
+          <td colspan="2"></td>
         <% end %>
       </tr>
     <% end %>
