--- a/app/views/licences/index.html.erb
+++ b/app/views/licences/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Software</h1>
-<table class="table table-striped">
+<table class="table table-striped table-sm">
   <thead>
     <tr>
       <th rowspan="2">Vendor</th>
@@ -26,12 +26,12 @@
         <td><%= licence.channel %></td>
         <td><%= licence.device.try(:name) %></td>
         <td><%= licence.person.try(:full_name) %></td>
-        <td class="fit"><%= link_to 'Show', licence, class: "btn btn-success" %></td>
+        <td><%= link_to 'Show', licence, class: "btn btn-success" %></td>
         <% if user_signed_in? %>
-          <td class="fit"><%= link_to 'Edit', edit_licence_path(licence), class: "btn btn-primary" %></td>
-          <td class="fit"><%= link_to 'Delete', licence, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></td>
+          <td><%= link_to 'Edit', edit_licence_path(licence), class: "btn btn-primary" %></td>
+          <td><%= link_to 'Delete', licence, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></td>
         <% else %>
-          <td colspan="2>" class="fit"></td>
+          <td colspan="2"></td>
         <% end %>
       </tr>
     <% end %>
