--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -26,7 +26,7 @@
 <%= link_to 'Back', people_path, class: "btn btn-primary" %>
 
 <h2>Person Licences</h2>
-<table class="table table-striped">
+<table class="table table-striped table-sm">
   <thead>
     <tr>
       <th>Vendor</th>
@@ -47,7 +47,7 @@
 </table>
 
 <h2>Device Licences</h2>
-<table class="table table-striped">
+<table class="table table-striped table-sm">
   <thead>
     <tr>
       <th>Vendor</th>
