--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -5,7 +5,7 @@
   <%= f.hidden_field :reset_password_token %>
 
   <div class="form-group row">
-    <%= f.label :password, "New password", class: "col-sm-2 control-label" %>
+    <%= f.label :password, "New password", class: "col-sm-2 col-form-label text-right" %>
     <div class="col-sm-4">
       <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
       <% if @minimum_password_length %>
@@ -15,7 +15,7 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :password_confirmation, "Confirm new password", class: "col-sm-2 control-label" %>
+    <%= f.label :password_confirmation, "Confirm new password", class: "col-sm-2 col-form-label text-right" %>
     <div class="col-sm-4">
       <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
     </div>
