--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -4,7 +4,7 @@
   <%= devise_error_messages! %>
 
   <div class="form-group row">
-    <%= f.label :email, class: "col-sm-2 control-label" %>
+    <%= f.label :email, class: "col-sm-2 col-form-label text-right" %>
     <div class="col-sm-4">
       <%= f.email_field :email, autofocus: true, class: "form-control" %>
     </div>
