--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,7 +4,7 @@
   <%= devise_error_messages! %>
 
   <div class="form-group row">
-    <%= f.label :email, class: "col-sm-2 control-label" %>
+    <%= f.label :email, class: "col-sm-2 col-form-label text-right" %>
     <div class="col-sm-4">
       <%= f.email_field :email, autofocus: true, class: "form-control" %>
     </div>
@@ -15,7 +15,7 @@
   <% end %>
 
   <div class="form-group row">
-    <%= f.label :current_password, class: "col-sm-2 control-label" %>
+    <%= f.label :current_password, class: "col-sm-2 col-form-label text-right" %>
     <div class="col-sm-4">
       <%= f.password_field :current_password, autocomplete: "off", class: "form-control" %>
       <span class="help-block">We need your current password to confirm changes</span>
@@ -23,7 +23,7 @@
   </div>
 
   <div class="form-group row">
-    <%= f.label :password, "New Password", class: "col-sm-2 control-label" %>
+    <%= f.label :password, "New Password", class: "col-sm-2 col-form-label text-right" %>
     <div class="col-sm-4">
       <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
       <% if @minimum_password_length %>
@@ -33,7 +33,7 @@
   </div>
 
   <div class="form-group row">
-    <%= f.label :password_confirmation, class: "col-sm-2 control-label" %>
+    <%= f.label :password_confirmation, class: "col-sm-2 col-form-label text-right" %>
     <div class="col-sm-4">
       <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
     </div>
