--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,14 +4,14 @@
   <%= devise_error_messages! %>
 
   <div class="form-group row">
-    <%= f.label :email, class: "col-sm-2 control-label" %>
+    <%= f.label :email, class: "col-sm-2 col-form-label text-right" %>
     <div class="col-sm-4">
       <%= f.email_field :email, autofocus: true, class: "form-control" %>
     </div>
   </div>
 
   <div class="form-group row">
-    <%= f.label :password, class: "col-sm-2 control-label" %>
+    <%= f.label :password, class: "col-sm-2 col-form-label text-right" %>
     <div class="col-sm-4">
       <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
       <% if @minimum_password_length %>
@@ -21,7 +21,7 @@
   </div>
 
   <div class="form-group row">
-    <%= f.label :password_confirmation, class: "col-sm-2 control-label" %>
+    <%= f.label :password_confirmation, class: "col-sm-2 col-form-label text-right" %>
     <div class="col-sm-4">
       <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
     </div>
