--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -15,28 +15,28 @@
 <%= form_for @person do |f| %>
 
   <div class="form-group row">
-    <%= f.label :first_name, class: "col-sm-2 col-form-label" %>
+    <%= f.label :first_name, class: "col-sm-2 col-form-label text-right" %>
     <div class="col-sm-4">
       <%= f.text_field :first_name, class: "form-control" %>
     </div>
   </div>
 
   <div class="form-group row">
-    <%= f.label :last_name, class: "col-sm-2 col-form-label" %>
+    <%= f.label :last_name, class: "col-sm-2 col-form-label text-right" %>
     <div class="col-sm-4">
       <%= f.text_field :last_name, class: "form-control" %>
     </div>
   </div>
 
   <div class="form-group row">
-    <%= f.label :location, class: "col-sm-2 col-form-label" %>
+    <%= f.label :location, class: "col-sm-2 col-form-label text-right" %>
     <div class="col-sm-4">
       <%= f.text_field :location, class: "form-control" %>
     </div>
   </div>
 
   <div class="form-group row">
-    <%= f.label :notes, class: "col-sm-2 col-form-label" %>
+    <%= f.label :notes, class: "col-sm-2 col-form-label text-right" %>
     <div class="col-sm-4">
       <%= f.text_area :notes, class: "form-control" %>
     </div>
