switch to extend in footer styling

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -46,8 +46,8 @@ html
   height: 50px
   // line-height = height for single line vertically centered
   line-height: 50px
-  font-size: $small-font-size
-  background-color: $gray-200
+  @extend .small
+  @extend .bg-light
 
 // styles for dl's on the show views
 dl.show
