removed table borders

--- a/app/views/licences/index.html.erb
+++ b/app/views/licences/index.html.erb
@@ -1,18 +1,15 @@
 <h1>Software</h1>
-<table class="table table-striped table-sm mt-4">
+<table class="table table-striped table-sm table-borderless mt-4">
   <thead>
     <tr>
-      <th rowspan="2">Vendor</th>
-      <th rowspan="2">Application</th>
-      <th rowspan="2">Version</th>
-      <th rowspan="2">Edition</th>
-      <th rowspan="2">Channel</th>
-      <th colspan="2">Assigned to</th>
-      <th rowspan="2" colspan="3" class="fit"></th>
-    </tr>
-    <tr>
+      <th>Vendor</th>
+      <th>Application</th>
+      <th>Version</th>
+      <th>Edition</th>
+      <th>Channel</th>
       <th>Device</th>
       <th>Person</th>
+      <th colspan="3" class="fit"></th>
     </tr>
   </thead>
 
