--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -1,68 +1,86 @@
-<h1><%= h @person.full_name %></h1>
-
 <% if notice %>
-  <div id="notice" class="alert alert-success alert-dismissible">
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-    <%= notice %>
+<div id="notice" class="alert alert-success alert-dismissible">
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
+      aria-hidden="true">&times;</span></button>
+  <%= notice %>
+</div>
+<% end %>
+
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <div class="card bg-light mt-4">
+        <div class="card-header container-fluid">
+          <div class="row">
+            <div class="col">
+              <h3>User details</h3>
+            </div>
+            <div class="col">
+              <% if user_signed_in? %>
+              <%= link_to 'Edit', edit_person_path(@person), class: "btn btn-primary float-right" %>
+              <% end %>
+            </div>
+          </div>
+        </div>
+        <div class="card-body">
+
+          <dl class="show-person">
+            <dt>First Name:</dt>
+            <dd><%= @person.first_name %></dd>
+            <dt>Last Name:</dt>
+            <dd><%= @person.last_name %></dd>
+            <dt>Location:</dt>
+            <dd><%= @person.location %></dd>
+            <dt>Device:</dt>
+            <dd><%= @person.device.try(:name) %></dd>
+          </dl>
+        </div>
+      </div>
+      <%= link_to 'Back', people_path, class: "btn btn-primary mt-3" %>
+    </div>
+
+    <div class="col">
+      <h2 class="mt-4">User Licences</h2>
+      <table class="table table-striped table-borderless table-sm">
+        <thead>
+          <tr>
+            <th>Vendor</th>
+            <th>Application</th>
+            <th>Channel</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <% @person.licences.each do |l| %>
+          <tr>
+            <td><%= "#{l.vendor}" %></td>
+            <td><%= "#{l.app_full}" %></td>
+            <td><%= "#{l.channel}" %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+
+      <h2 class="mt-4">Device Licences</h2>
+      <table class="table table-striped table-borderless table-sm">
+        <thead>
+          <tr>
+            <th>Vendor</th>
+            <th>Application</th>
+            <th>Channel</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <% @person.device.try(:licences).try(:each) do |l| %>
+          <tr>
+            <td><%= "#{l.vendor}" %></td>
+            <td><%= "#{l.app_full}" %></td>
+            <td><%= "#{l.channel}" %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
   </div>
-<% end %>
-
-<hr />
-<dl class="show">
-  <dt>First Name:</dt>
-  <dd><%= @person.first_name %></dd>
-  <dt>Last Name:</dt>
-  <dd><%= @person.last_name %></dd>
-  <dt>Location:</dt>
-  <dd><%= @person.location %></dd>
-  <dt>Device:</dt>
-  <dd><%= @person.device.try(:name) %></dd>
-</dl>
-<hr />
-
-<% if user_signed_in? %>
-  <%= link_to 'Edit', edit_person_path(@person), class: "btn btn-primary" %>
-<% end %>
-<%= link_to 'Back', people_path, class: "btn btn-primary" %>
-
-<h2>Person Licences</h2>
-<table class="table table-striped table-sm">
-  <thead>
-    <tr>
-      <th>Vendor</th>
-      <th>Application</th>
-      <th>Channel</th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @person.licences.each do |l| %>
-      <tr>
-        <td><%= "#{l.vendor}" %></td>
-        <td><%= "#{l.app_full}" %></td>
-        <td><%= "#{l.channel}" %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<h2>Device Licences</h2>
-<table class="table table-striped table-sm">
-  <thead>
-    <tr>
-      <th>Vendor</th>
-      <th>Application</th>
-      <th>Channel</th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @person.device.try(:licences).try(:each) do |l| %>
-      <tr>
-        <td><%= "#{l.vendor}" %></td>
-        <td><%= "#{l.app_full}" %></td>
-        <td><%= "#{l.channel}" %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+</div>
