--- a/app/views/licences/_form.html.erb
+++ b/app/views/licences/_form.html.erb
@@ -1,107 +1,22 @@
-<% if @licence.errors.any? %>
-  <div id="error_explanation" class="alert alert-danger alert-dismissible">
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-    <strong><%= pluralize(@licence.errors.count, "error") %> prohibited this licence from being saved:</strong>
-
-    <ul>
-    <% @licence.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-    </ul>
-  </div>
-<% end %>
-
-<!-- horizontal form -->
-<%= form_for @licence do |f| %>
-
-  <div class="form-group row">
-    <%= f.label :vendor, class: "col-sm-2 col-form-label text-right" %>
-    <div class="col-sm-4">
-      <%= f.text_field :vendor, class: "form-control" %>
-    </div>
-  </div>
-
-  <div class="form-group row">
-    <%= f.label :app_name, class: "col-sm-2 col-form-label text-right" %>
-    <div class="col-sm-4">
-      <%= f.text_field :app_name, class: "form-control" %>
-    </div>
-  </div>
-
-  <div class="form-group row">
-    <%= f.label :version, class: "col-sm-2 col-form-label text-right" %>
-    <div class="col-sm-4">
-      <%= f.text_field :version, class: "form-control" %>
-    </div>
-  </div>
-
-  <div class="form-group row">
-    <%= f.label :edition, class: "col-sm-2 col-form-label text-right" %>
-    <div class="col-sm-4">
-      <%= f.text_field :edition, class: "form-control" %>
-    </div>
-  </div>
-
-  <div class="form-group row">
-    <%= f.label :channel, class: "col-sm-2 col-form-label text-right" %>
-    <div class="col-sm-4">
-      <%= f.text_field :channel, class: "form-control" %>
-    </div>
-  </div>
-
-  <div class="form-group row">
-    <%= f.label :purchased_from, class: "col-sm-2 col-form-label text-right" %>
-    <div class="col-sm-4">
-      <%= f.text_field :purchased_from, class: "form-control" %>
-    </div>
-  </div>
-
-  <div class="form-group row">
-    <%= f.label :purchased_on, class: "col-sm-2 col-form-label text-right" %>
-    <div class="col-sm-4">
-      <%= f.date_field :purchased_on, class: "form-control" %>
-    </div>
-  </div>
-
-  <div class="form-group row">
-    <%= f.label :in_use, class: "col-sm-2 col-form-label text-right" %>
-    <div class="col-sm-4">
-      <%= f.select :in_use, [["Yes", true],["No", false]], {prompt: true}, {class: "form-control"} %>
-    </div>
-  </div>
-
+<%= bootstrap_form_for(@licence, layout: :horizontal, label_col: "col-sm-12 col-md-3 col-lg-2", control_col: "col-sm-12 col-md-6 col-lg-4") do |f| %>
+  <%= f.text_field :vendor %>
+  <%= f.text_field :app_name %>
+  <%= f.text_field :version %>
+  <%= f.text_field :edition %>
+  <%= f.text_field :channel %>
+  <%= f.text_field :purchased_from %>
+  <%= f.date_select :purchased_on %>
+  <%= f.select :in_use, [["Yes", true],["No", false]], {prompt: true} %>
+  <%= f.text_area :notes %>
   <fieldset>
-    <legend>Assign to</legend>
-
-    <div class="form-group row">
-      <%= f.label :device_id, class: "col-sm-2 col-form-label text-right" %>
-      <div class="col-sm-4">
-        <%= f.collection_select :device_id, Device.order(:tag), :id, :name, {prompt: true, include_blank: "None"}, {class: "form-control"} %>
-      </div>
-    </div>
-
-    <div class="form-group row">
-      <%= f.label :person_id, class: "col-sm-2 col-form-label text-right" %>
-      <div class="col-sm-4">
-        <%= f.collection_select :person_id, Person.order(:last_name), :id, :full_name, {prompt: true, include_blank: "None"}, {class: "form-control"} %>
-      </div>
-    </div>
+    <legend>Assigned to</legend>
+    <%= f.collection_select :device_id, Device.order(:tag), :id, :name, {prompt: true, include_blank: "None"} %>
+    <%= f.collection_select :person_id, Person.order(:last_name), :id, :full_name, {prompt: true, include_blank: "None"} %>
   </fieldset>
-
-  <fieldset>
-  <legend></legend>
-  <div class="form-group row">
-    <%= f.label :notes, class: "col-sm-2 col-form-label text-right" %>
-    <div class="col-sm-4">
-      <%= f.text_area :notes, class: "form-control" %>
-    </div>
+  <div class="row">
+  <div class="col-md-4 offset-md-3 offset-lg-2">
+  <%= f.submit "Submit", class: "btn btn-success" %>
+  <%= link_to "Back", :back, class: "btn btn-primary" %>
   </div>
-  </fieldset>
-
-  <div class="actions form-group row">
-    <div class="col-sm-10 offset-sm-2">
-      <%= f.submit "Submit", class: "btn btn-success" %>
-      <%= link_to "Back", :back, class: "btn btn-primary" %>
-    </div>
   </div>
 <% end %>
