--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -1,51 +1,12 @@
-<% if @person.errors.any? %>
-  <div id="error_explanation" class="alert alert-danger alert-dismissible">
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-    <strong><%= pluralize(@person.errors.count, "error") %> prohibited this person from being saved:</strong>
-
-    <ul>
-    <% @person.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-    </ul>
+<%= bootstrap_form_for(@person, layout: :horizontal, label_col: "col-sm-12 col-md-3 col-lg-2", control_col: "col-sm-12 col-md-6 col-lg-4") do |f| %>
+  <%= f.text_field :first_name %>
+  <%= f.text_field :last_name %>
+  <%= f.text_field :location %>
+  <%= f.text_area :notes %>
+  <div class="row">
+  <div class="col-md-4 offset-md-3 offset-lg-2">
+  <%= f.submit "Submit", class: "btn btn-success" %>
+  <%= link_to "Back", :back, class: "btn btn-primary" %>
   </div>
-<% end %>
-
-<!-- horizontal form -->
-<%= form_for @person do |f| %>
-
-  <div class="form-group row">
-    <%= f.label :first_name, class: "col-sm-2 col-form-label text-right" %>
-    <div class="col-sm-4">
-      <%= f.text_field :first_name, class: "form-control" %>
-    </div>
-  </div>
-
-  <div class="form-group row">
-    <%= f.label :last_name, class: "col-sm-2 col-form-label text-right" %>
-    <div class="col-sm-4">
-      <%= f.text_field :last_name, class: "form-control" %>
-    </div>
-  </div>
-
-  <div class="form-group row">
-    <%= f.label :location, class: "col-sm-2 col-form-label text-right" %>
-    <div class="col-sm-4">
-      <%= f.text_field :location, class: "form-control" %>
-    </div>
-  </div>
-
-  <div class="form-group row">
-    <%= f.label :notes, class: "col-sm-2 col-form-label text-right" %>
-    <div class="col-sm-4">
-      <%= f.text_area :notes, class: "form-control" %>
-    </div>
-  </div>
-
-  <div class="actions form-group row">
-    <div class="col-sm-10 offset-sm-2">
-      <%= f.submit "Submit", class: "btn btn-success" %>
-      <%= link_to "Back", :back, class: "btn btn-primary" %>
-    </div>
   </div>
 <% end %>
