move index top spacing to h1 tags

--- a/app/views/import/index.html.erb
+++ b/app/views/import/index.html.erb
@@ -1,6 +1,6 @@
-<h1>Import Data</h1>
+<h1 class="mb-4">Import Data</h1>
 
-<h3 class="mt-4">Import People</h3>
+<h3>Import People</h3>
 <%= form_tag import_people_path, multipart: true do %>
   <div class="form-group">
     <div class="custom-file col-6">
