--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -1,5 +1,5 @@
-<h1>Hardware</h1>
-<table class="table table-striped table-sm table-borderless mt-4">
+<h1 class="mb-4">Hardware</h1>
+<table class="table table-striped table-sm table-borderless">
   <thead>
     <tr>
       <th>Asset Tag</th>
