--- a/app/views/licences/index.html.erb
+++ b/app/views/licences/index.html.erb
@@ -1,5 +1,5 @@
-<h1>Software</h1>
-<table class="table table-striped table-sm table-borderless mt-4">
+<h1 class="mb-4">Software</h1>
+<table class="table table-striped table-sm table-borderless">
   <thead>
     <tr>
       <th>Vendor</th>
