--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -1,6 +1,6 @@
-<h1>People</h1>
+<h1 class="mb-4">People</h1>
 
-<table class="table table-striped table-sm table-borderless mt-4">
+<table class="table table-striped table-sm table-borderless">
   <thead>
     <tr>
       <th>Name</th>
